docs/versioned_docs/version-0.14.3/api/v2/crm/upsert-contact.api.mdx
---
id: upsert-contact
title: "Upsert contact"
description: "Upsert contact"
sidebar_label: "Upsert contact"
hide_title: true
hide_table_of_contents: true
api: {"operationId":"upsertContact","tags":["Contacts"],"security":[{"x-api-key":[]}],"parameters":[{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true},{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"type":"object","properties":{"record":{"type":"object","properties":{"first_name":{"type":"string","nullable":true,"example":"George"},"last_name":{"type":"string","nullable":true,"example":"Xing"},"account_id":{"type":"string","nullable":true,"example":"64571bff-48ea-4469-9fa0-ee1a0bab38bd"},"addresses":{"type":"array","items":{"type":"object","properties":{"address_type":{"type":"string","enum":["primary","mailing","other","billing","shipping"]},"city":{"type":"string","nullable":true,"example":"San Francisco"},"country":{"type":"string","nullable":true,"example":"USA"},"postal_code":{"type":"string","nullable":true,"example":"94107"},"state":{"type":"string","nullable":true,"example":"CA"},"street_1":{"type":"string","nullable":true,"example":"525 Brannan"},"street_2":{"type":"string","nullable":true,"example":null}},"required":["address_type","city","country","postal_code","state","street_1","street_2"]},"example":[{"address_type":"shipping","city":"San Francisco","country":"US","postal_code":"94107","state":"CA","street_1":"525 Brannan","street_2":null}],"title":"addresses"},"email_addresses":{"type":"array","items":{"type":"object","properties":{"email_address":{"type":"string","example":"hello@supaglue.com"},"email_address_type":{"type":"string","enum":["primary","work","other"]}},"required":["email_address","email_address_type"]},"example":[{"email_address":"hello@supaglue.com","email_address_type":"work"}],"title":"email_addresses"},"phone_numbers":{"type":"array","items":{"type":"object","properties":{"phone_number":{"type":"string","nullable":true,"example":"+14151234567"},"phone_number_type":{"type":"string","enum":["primary","mobile","fax","other"]}},"required":["phone_number","phone_number_type"]},"example":[{"phone_number":"+14151234567","phone_number_type":"primary"}],"title":"phone_numbers"},"owner_id":{"type":"string","nullable":true,"example":"9f3e97fd-4d5d-4efc-959d-bbebfac079f5"},"lifecycle_stage":{"type":"string","nullable":true,"enum":["subscriber","lead","marketingqualifiedlead","salesqualifiedlead","opportunity","customer","evangelist","other"],"title":"lifecycle_stage"},"custom_fields":{"type":"object","additionalProperties":true,"description":"Custom properties to be inserted that are not covered by the common object. Object keys must match exactly to the corresponding provider API.","title":"custom_fields"}},"title":"create_update_contact"},"upsert_on":{"type":"object","properties":{"key":{"type":"string","enum":["email"]},"values":{"type":"array","items":{"type":"string","example":"hello@example.com"}}},"required":["key","values"]}},"required":["record","upsert_on"]}}}},"responses":{"201":{"description":"Contact created","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string","example":"name is a required field on model."},"problem_type":{"type":"string","example":"MISSING_REQUIRED_FIELD"},"source":{"type":"object","properties":{"pointer":{"type":"string","example":"irure consectetur"}}},"title":{"type":"string","example":"Missing Required Field"}},"example":[{"detail":"name is a required field on model.","problem_type":"MISSING_REQUIRED_FIELD","source":{"pointer":"irure consectetur"},"title":"Missing Required Field"},{"detail":"name is a required field on model.","problem_type":"MISSING_REQUIRED_FIELD","source":{"pointer":"et"},"title":"Missing Required Field"}]},"title":"errors"},"record":{"type":"object","properties":{"id":{"type":"string"}},"required":["id"],"title":"created_record"},"warnings":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string","example":"An unrecognized field, age, was passed in with request data."},"problem_type":{"type":"string","example":"UNRECOGNIZED_FIELD"},"source":{"type":"object","properties":{"pointer":{"type":"string","example":"Lorem ipsum"}}},"title":{"type":"string","example":"Unrecognized Field"}}},"example":[{"detail":"An unrecognized field, age, was passed in with request data.","problem_type":"UNRECOGNIZED_FIELD","source":{"pointer":"Lorem ipsum"},"title":"Unrecognized Field"},{"detail":"An unrecognized field, age, was passed in with request data.","problem_type":"UNRECOGNIZED_FIELD","source":{"pointer":"in"},"title":"Unrecognized Field"}],"title":"warnings"}}}}}}},"description":"Upsert contact","method":"post","path":"/contacts/_upsert","servers":[{"url":"https://api.supaglue.io/crm/v2","description":"Supaglue API"}],"securitySchemes":{"x-api-key":{"type":"apiKey","name":"x-api-key","in":"header","description":"API key to allow developers to access the API"}},"jsonRequestBodyExample":{"record":{"first_name":"George","last_name":"Xing","account_id":"64571bff-48ea-4469-9fa0-ee1a0bab38bd","addresses":[{"address_type":"shipping","city":"San Francisco","country":"US","postal_code":"94107","state":"CA","street_1":"525 Brannan","street_2":null}],"email_addresses":[{"email_address":"hello@supaglue.com","email_address_type":"work"}],"phone_numbers":[{"phone_number":"+14151234567","phone_number_type":"primary"}],"owner_id":"9f3e97fd-4d5d-4efc-959d-bbebfac079f5","lifecycle_stage":"subscriber","custom_fields":{}},"upsert_on":{"key":"email","values":["hello@example.com"]}},"info":{"version":"0.14.3","title":"Unified CRM API","contact":{"name":"Supaglue","email":"docs@supaglue.com","url":"https://supaglue.com"},"description":"#### Introduction\n\nWelcome to the Unified API documentation for CRM. You can use this API to write to multiple third-party providers within the CRM category.\n\n[View common schema for CRM](https://docs.supaglue.com/platform/common-schemas/crm)\n\n[![Run in Postman](https://run.pstmn.io/button.svg)](https://www.postman.com/supaglue/workspace/supaglue-public/overview)\n\n#### Base API URL\n```\nhttps://api.supaglue.io/crm/v2\n```\n"},"postman":{"name":"Upsert contact","description":{"type":"text/plain"},"url":{"path":["contacts","_upsert"],"host":["{{baseUrl}}"],"query":[],"variable":[]},"header":[{"disabled":false,"description":{"content":"(Required) The customer ID that uniquely identifies the customer in your application","type":"text/plain"},"key":"x-customer-id","value":""},{"disabled":false,"description":{"content":"(Required) The provider name","type":"text/plain"},"key":"x-provider-name","value":""},{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}},"auth":{"type":"apikey","apikey":[{"type":"any","value":"x-api-key","key":"key"},{"type":"any","value":"<API Key>","key":"value"},{"type":"any","value":"header","key":"in"}]}}}
sidebar_class_name: "post api-method"
info_path: api/v2/crm/unified-crm-api
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import MethodEndpoint from "@theme/ApiDemoPanel/MethodEndpoint";
import SecuritySchemes from "@theme/ApiDemoPanel/SecuritySchemes";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";

<h1 className={"openapi__heading"}>Upsert contact</h1>

<MethodEndpoint method={"post"} path={"/contacts/_upsert"}></MethodEndpoint>

<SecuritySchemes infoPath={"api/v2/crm/unified-crm-api"}></SecuritySchemes>



Upsert contact

## Request

<details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Header Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true}}></ParamsItem></ul></div></details><MimeTabs className={"openapi-tabs__mime"}><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} className={"openapi-markdown__details mime"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-mime"}><h3 className={"openapi-markdown__details-summary-header-body"}>Body</h3><strong className={"openapi-schema__required"}>required</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>record</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"first_name"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"George"}}></SchemaItem><SchemaItem collapsible={false} name={"last_name"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"Xing"}}></SchemaItem><SchemaItem collapsible={false} name={"account_id"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"64571bff-48ea-4469-9fa0-ee1a0bab38bd"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>addresses</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"address_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `mailing`, `other`, `billing`, `shipping`]"} schema={{"type":"string","enum":["primary","mailing","other","billing","shipping"]}}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"San Francisco"}}></SchemaItem><SchemaItem collapsible={false} name={"country"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"USA"}}></SchemaItem><SchemaItem collapsible={false} name={"postal_code"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"94107"}}></SchemaItem><SchemaItem collapsible={false} name={"state"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"CA"}}></SchemaItem><SchemaItem collapsible={false} name={"street_1"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"525 Brannan"}}></SchemaItem><SchemaItem collapsible={false} name={"street_2"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":null}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>email_addresses</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"email_address"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"hello@supaglue.com"}}></SchemaItem><SchemaItem collapsible={false} name={"email_address_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `work`, `other`]"} schema={{"type":"string","enum":["primary","work","other"]}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>phone_numbers</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"phone_number"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"+14151234567"}}></SchemaItem><SchemaItem collapsible={false} name={"phone_number_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `mobile`, `fax`, `other`]"} schema={{"type":"string","enum":["primary","mobile","fax","other"]}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={false} name={"owner_id"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"9f3e97fd-4d5d-4efc-959d-bbebfac079f5"}}></SchemaItem><SchemaItem collapsible={false} name={"lifecycle_stage"} required={false} schemaName={"lifecycle_stage"} qualifierMessage={"**Possible values:** [`subscriber`, `lead`, `marketingqualifiedlead`, `salesqualifiedlead`, `opportunity`, `customer`, `evangelist`, `other`]"} schema={{"type":"string","nullable":true,"enum":["subscriber","lead","marketingqualifiedlead","salesqualifiedlead","opportunity","customer","evangelist","other"],"title":"lifecycle_stage"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>custom_fields</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Custom properties to be inserted that are not covered by the common object. Object keys must match exactly to the corresponding provider API.

</div><SchemaItem name={"property name*"} required={false} schemaName={"any"} qualifierMessage={undefined} schema={{"type":"object","additionalProperties":true,"description":"Custom properties to be inserted that are not covered by the common object. Object keys must match exactly to the corresponding provider API.","title":"custom_fields"}} collapsible={false} discriminator={false}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>upsert_on</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"key"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`email`]"} schema={{"type":"string","enum":["email"]}}></SchemaItem><SchemaItem collapsible={false} name={"values"} required={true} schemaName={"string[]"} qualifierMessage={undefined} schema={{"type":"array","items":{"type":"string","example":"hello@example.com"}}}></SchemaItem></div></details></SchemaItem></ul></details></TabItem></MimeTabs><div><div><ApiTabs><TabItem label={"201"} value={"201"}><div>

Contact created

</div><div><MimeTabs className={"openapi-tabs__mime"} schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs className={"openapi-tabs__schema"}><TabItem label={"Schema"} value={"Schema"}><details style={{}} className={"openapi-markdown__details response"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-response"}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>errors</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"name is a required field on model."}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"MISSING_REQUIRED_FIELD"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>source</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"pointer"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"irure consectetur"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Missing Required Field"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>record</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>warnings</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"An unrecognized field, age, was passed in with request data."}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"UNRECOGNIZED_FIELD"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>source</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"pointer"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Lorem ipsum"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"Unrecognized Field"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    [\n      {\n        \"detail\": \"name is a required field on model.\",\n        \"problem_type\": \"MISSING_REQUIRED_FIELD\",\n        \"source\": {\n          \"pointer\": \"irure consectetur\"\n        },\n        \"title\": \"Missing Required Field\"\n      },\n      {\n        \"detail\": \"name is a required field on model.\",\n        \"problem_type\": \"MISSING_REQUIRED_FIELD\",\n        \"source\": {\n          \"pointer\": \"et\"\n        },\n        \"title\": \"Missing Required Field\"\n      }\n    ]\n  ],\n  \"record\": {\n    \"id\": \"string\"\n  },\n  \"warnings\": [\n    {\n      \"detail\": \"An unrecognized field, age, was passed in with request data.\",\n      \"problem_type\": \"UNRECOGNIZED_FIELD\",\n      \"source\": {\n        \"pointer\": \"Lorem ipsum\"\n      },\n      \"title\": \"Unrecognized Field\"\n    },\n    {\n      \"detail\": \"An unrecognized field, age, was passed in with request data.\",\n      \"problem_type\": \"UNRECOGNIZED_FIELD\",\n      \"source\": {\n        \"pointer\": \"in\"\n      },\n      \"title\": \"Unrecognized Field\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div></div>
      
