docs/versioned_docs/version-0.14.11/api/v2/crm/upsert-contact.api.mdx
---
id: upsert-contact
title: "Upsert contact"
description: "Upsert contact"
sidebar_label: "Upsert contact"
hide_title: true
hide_table_of_contents: true
api: {"operationId":"upsertContact","tags":["Contacts"],"security":[{"x-api-key":[]}],"parameters":[{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true},{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true}],"requestBody":{"required":true,"content":{"application/json":{"schema":{"type":"object","properties":{"record":{"type":"object","properties":{"first_name":{"type":"string","nullable":true,"example":"George"},"last_name":{"type":"string","nullable":true,"example":"Xing"},"account_id":{"type":"string","nullable":true,"example":"64571bff-48ea-4469-9fa0-ee1a0bab38bd"},"addresses":{"type":"array","items":{"type":"object","properties":{"address_type":{"type":"string","enum":["primary","mailing","other","billing","shipping"]},"city":{"type":"string","nullable":true,"example":"San Francisco"},"country":{"type":"string","nullable":true,"example":"USA"},"postal_code":{"type":"string","nullable":true,"example":"94107"},"state":{"type":"string","nullable":true,"example":"CA"},"street_1":{"type":"string","nullable":true,"example":"525 Brannan"},"street_2":{"type":"string","nullable":true,"example":null}},"required":["address_type","city","country","postal_code","state","street_1","street_2"]},"example":[{"address_type":"shipping","city":"San Francisco","country":"US","postal_code":"94107","state":"CA","street_1":"525 Brannan","street_2":null}],"title":"addresses"},"email_addresses":{"type":"array","items":{"type":"object","properties":{"email_address":{"type":"string","example":"hello@supaglue.com"},"email_address_type":{"type":"string","enum":["primary","work","other"]}},"required":["email_address","email_address_type"]},"example":[{"email_address":"hello@supaglue.com","email_address_type":"work"}],"title":"email_addresses"},"phone_numbers":{"type":"array","items":{"type":"object","properties":{"phone_number":{"type":"string","nullable":true,"example":"+14151234567"},"phone_number_type":{"type":"string","enum":["primary","mobile","fax","other"]}},"required":["phone_number","phone_number_type"]},"example":[{"phone_number":"+14151234567","phone_number_type":"primary"}],"title":"phone_numbers"},"owner_id":{"type":"string","nullable":true,"example":"9f3e97fd-4d5d-4efc-959d-bbebfac079f5"},"lifecycle_stage":{"type":"string","nullable":true,"enum":["subscriber","lead","marketingqualifiedlead","salesqualifiedlead","opportunity","customer","evangelist","other"],"title":"lifecycle_stage"},"custom_fields":{"type":"object","additionalProperties":true,"description":"Custom properties to be inserted that are not covered by the common object. Object keys must match exactly to the corresponding provider API.","title":"custom_fields"}},"title":"create_update_contact"},"upsert_on":{"type":"object","properties":{"key":{"type":"string","enum":["email"]},"values":{"type":"array","items":{"type":"string","example":"hello@example.com"}}},"required":["key","values"]}},"required":["record","upsert_on"]}}}},"responses":{"201":{"description":"Contact created","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string","description":"The full error message from the remote Provider. The schema and level of detail will vary by Provider.","example":"{\"code\":400,\"body\":{\"status\":\"error\",\"message\":\"Property values were not valid: [{\\\\\"isValid\\\\\":false,\\\\\"message\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\",\\\\\"error\\\\\":\\\\\"PROPERTY_DOESNT_EXIST\\\\\",\\\\\"name\\\\\":\\\\\"__about_us\\\\\",\\\\\"localizedErrorMessage\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\"}]\",\"correlationId\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"category\":\"VALIDATION_ERROR\"},\"headers\":{\"access-control-allow-credentials\":\"false\",\"cf-cache-status\":\"DYNAMIC\",\"cf-ray\":\"8053d17b9dae9664-SJC\",\"connection\":\"close\",\"content-length\":\"361\",\"content-type\":\"application/json;charset=utf-8\",\"date\":\"Mon, 11 Sep 2023 23:51:22 GMT\",\"nel\":\"{\\\\\"success_fraction\\\\\":0.01,\\\\\"report_to\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"report-to\":\"{\\\\\"endpoints\\\\\":[{\\\\\"url\\\\\":\\\\\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\\\\\"}],\\\\\"group\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"server\":\"cloudflare\",\"strict-transport-security\":\"max-age=31536000; includeSubDomains; preload\",\"vary\":\"origin, Accept-Encoding\",\"x-content-type-options\":\"nosniff\",\"x-envoy-upstream-service-time\":\"91\",\"x-evy-trace-listener\":\"listener_https\",\"x-evy-trace-route-configuration\":\"listener_https/all\",\"x-evy-trace-route-service-name\":\"envoyset-translator\",\"x-evy-trace-served-by-pod\":\"iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2\",\"x-evy-trace-virtual-host\":\"all\",\"x-hubspot-correlation-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-hubspot-ratelimit-interval-milliseconds\":\"10000\",\"x-hubspot-ratelimit-max\":\"100\",\"x-hubspot-ratelimit-remaining\":\"99\",\"x-hubspot-ratelimit-secondly\":\"10\",\"x-hubspot-ratelimit-secondly-remaining\":\"9\",\"x-request-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-trace\":\"2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000\"}}\n"},"problem_type":{"type":"string","description":"The Supaglue error code associated with the error.","example":"MISSING_REQUIRED_FIELD"},"title":{"type":"string","description":"A brief description of the error. The schema and type of message will vary by Provider.","example":"Property values were not valid\n"}},"example":[{"detail":"{\"code\":400,\"body\":{\"status\":\"error\",\"message\":\"Property values were not valid: [{\\\\\"isValid\\\\\":false,\\\\\"message\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\",\\\\\"error\\\\\":\\\\\"PROPERTY_DOESNT_EXIST\\\\\",\\\\\"name\\\\\":\\\\\"__about_us\\\\\",\\\\\"localizedErrorMessage\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\"}]\",\"correlationId\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"category\":\"VALIDATION_ERROR\"},\"headers\":{\"access-control-allow-credentials\":\"false\",\"cf-cache-status\":\"DYNAMIC\",\"cf-ray\":\"8053d17b9dae9664-SJC\",\"connection\":\"close\",\"content-length\":\"361\",\"content-type\":\"application/json;charset=utf-8\",\"date\":\"Mon, 11 Sep 2023 23:51:22 GMT\",\"nel\":\"{\\\\\"success_fraction\\\\\":0.01,\\\\\"report_to\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"report-to\":\"{\\\\\"endpoints\\\\\":[{\\\\\"url\\\\\":\\\\\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\\\\\"}],\\\\\"group\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"server\":\"cloudflare\",\"strict-transport-security\":\"max-age=31536000; includeSubDomains; preload\",\"vary\":\"origin, Accept-Encoding\",\"x-content-type-options\":\"nosniff\",\"x-envoy-upstream-service-time\":\"91\",\"x-evy-trace-listener\":\"listener_https\",\"x-evy-trace-route-configuration\":\"listener_https/all\",\"x-evy-trace-route-service-name\":\"envoyset-translator\",\"x-evy-trace-served-by-pod\":\"iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2\",\"x-evy-trace-virtual-host\":\"all\",\"x-hubspot-correlation-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-hubspot-ratelimit-interval-milliseconds\":\"10000\",\"x-hubspot-ratelimit-max\":\"100\",\"x-hubspot-ratelimit-remaining\":\"99\",\"x-hubspot-ratelimit-secondly\":\"10\",\"x-hubspot-ratelimit-secondly-remaining\":\"9\",\"x-request-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-trace\":\"2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000\"}}\n","problem_type":"BAD_REQUEST_ERROR","title":"Property values were not valid\n"}]},"title":"errors"},"record":{"type":"object","properties":{"id":{"type":"string"}},"required":["id"],"title":"created_record"},"warnings":{"type":"array","items":{"type":"object","properties":{"detail":{"type":"string"},"problem_type":{"type":"string"},"title":{"type":"string"}}},"title":"warnings"}}}}}}},"description":"Upsert contact","method":"post","path":"/contacts/_upsert","servers":[{"url":"https://api.supaglue.io/crm/v2","description":"Supaglue API"}],"securitySchemes":{"x-api-key":{"type":"apiKey","name":"x-api-key","in":"header","description":"API key to allow developers to access the API"}},"jsonRequestBodyExample":{"record":{"first_name":"George","last_name":"Xing","account_id":"64571bff-48ea-4469-9fa0-ee1a0bab38bd","addresses":[{"address_type":"shipping","city":"San Francisco","country":"US","postal_code":"94107","state":"CA","street_1":"525 Brannan","street_2":null}],"email_addresses":[{"email_address":"hello@supaglue.com","email_address_type":"work"}],"phone_numbers":[{"phone_number":"+14151234567","phone_number_type":"primary"}],"owner_id":"9f3e97fd-4d5d-4efc-959d-bbebfac079f5","lifecycle_stage":"subscriber","custom_fields":{}},"upsert_on":{"key":"email","values":["hello@example.com"]}},"info":{"version":"0.14.11","title":"Unified CRM API","contact":{"name":"Supaglue","email":"docs@supaglue.com","url":"https://supaglue.com"},"description":"#### Introduction\n\nWelcome to the Unified API documentation for CRM. You can use this API to write to multiple third-party providers within the CRM category.\n\n[View common schema for CRM](https://docs.supaglue.com/platform/common-schemas/crm)\n\n[![Run in Postman](https://run.pstmn.io/button.svg)](https://www.postman.com/supaglue/workspace/supaglue-public/overview)\n\n#### Base API URL\n```\nhttps://api.supaglue.io/crm/v2\n```\n"},"postman":{"name":"Upsert contact","description":{"type":"text/plain"},"url":{"path":["contacts","_upsert"],"host":["{{baseUrl}}"],"query":[],"variable":[]},"header":[{"disabled":false,"description":{"content":"(Required) The customer ID that uniquely identifies the customer in your application","type":"text/plain"},"key":"x-customer-id","value":""},{"disabled":false,"description":{"content":"(Required) The provider name","type":"text/plain"},"key":"x-provider-name","value":""},{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}},"auth":{"type":"apikey","apikey":[{"type":"any","value":"x-api-key","key":"key"},{"type":"any","value":"<API Key>","key":"value"},{"type":"any","value":"header","key":"in"}]}}}
sidebar_class_name: "post api-method"
info_path: api/v2/crm/unified-crm-api
custom_edit_url: null
---

import ApiTabs from "@theme/ApiTabs";
import DiscriminatorTabs from "@theme/DiscriminatorTabs";
import MethodEndpoint from "@theme/ApiDemoPanel/MethodEndpoint";
import SecuritySchemes from "@theme/ApiDemoPanel/SecuritySchemes";
import MimeTabs from "@theme/MimeTabs";
import ParamsItem from "@theme/ParamsItem";
import ResponseSamples from "@theme/ResponseSamples";
import SchemaItem from "@theme/SchemaItem";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";

<h1 className={"openapi__heading"}>Upsert contact</h1>

<MethodEndpoint method={"post"} path={"/contacts/_upsert"}></MethodEndpoint>

<SecuritySchemes infoPath={"api/v2/crm/unified-crm-api"}></SecuritySchemes>



Upsert contact

## Request

<details style={{"marginBottom":"1rem"}} className={"openapi-markdown__details"} data-collapsed={false} open={true}><summary style={{}}><h3 className={"openapi-markdown__details-summary-header-params"}>Header Parameters</h3></summary><div><ul><ParamsItem className={"paramsItem"} param={{"name":"x-customer-id","in":"header","schema":{"type":"string","example":"my-customer-1"},"description":"The customer ID that uniquely identifies the customer in your application","required":true}}></ParamsItem><ParamsItem className={"paramsItem"} param={{"name":"x-provider-name","in":"header","schema":{"type":"string","example":"salesforce"},"description":"The provider name","required":true}}></ParamsItem></ul></div></details><MimeTabs className={"openapi-tabs__mime"}><TabItem label={"application/json"} value={"application/json-schema"}><details style={{}} className={"openapi-markdown__details mime"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-mime"}><h3 className={"openapi-markdown__details-summary-header-body"}>Body</h3><strong className={"openapi-schema__required"}>required</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>record</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"first_name"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"George"}}></SchemaItem><SchemaItem collapsible={false} name={"last_name"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"Xing"}}></SchemaItem><SchemaItem collapsible={false} name={"account_id"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"64571bff-48ea-4469-9fa0-ee1a0bab38bd"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>addresses</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"address_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `mailing`, `other`, `billing`, `shipping`]"} schema={{"type":"string","enum":["primary","mailing","other","billing","shipping"]}}></SchemaItem><SchemaItem collapsible={false} name={"city"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"San Francisco"}}></SchemaItem><SchemaItem collapsible={false} name={"country"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"USA"}}></SchemaItem><SchemaItem collapsible={false} name={"postal_code"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"94107"}}></SchemaItem><SchemaItem collapsible={false} name={"state"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"CA"}}></SchemaItem><SchemaItem collapsible={false} name={"street_1"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"525 Brannan"}}></SchemaItem><SchemaItem collapsible={false} name={"street_2"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":null}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>email_addresses</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"email_address"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","example":"hello@supaglue.com"}}></SchemaItem><SchemaItem collapsible={false} name={"email_address_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `work`, `other`]"} schema={{"type":"string","enum":["primary","work","other"]}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>phone_numbers</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"phone_number"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"+14151234567"}}></SchemaItem><SchemaItem collapsible={false} name={"phone_number_type"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`primary`, `mobile`, `fax`, `other`]"} schema={{"type":"string","enum":["primary","mobile","fax","other"]}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={false} name={"owner_id"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","nullable":true,"example":"9f3e97fd-4d5d-4efc-959d-bbebfac079f5"}}></SchemaItem><SchemaItem collapsible={false} name={"lifecycle_stage"} required={false} schemaName={"lifecycle_stage"} qualifierMessage={"**Possible values:** [`subscriber`, `lead`, `marketingqualifiedlead`, `salesqualifiedlead`, `opportunity`, `customer`, `evangelist`, `other`]"} schema={{"type":"string","nullable":true,"enum":["subscriber","lead","marketingqualifiedlead","salesqualifiedlead","opportunity","customer","evangelist","other"],"title":"lifecycle_stage"}}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>custom_fields</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>

Custom properties to be inserted that are not covered by the common object. Object keys must match exactly to the corresponding provider API.

</div><SchemaItem name={"property name*"} required={false} schemaName={"any"} qualifierMessage={undefined} schema={{"type":"object","additionalProperties":true,"description":"Custom properties to be inserted that are not covered by the common object. Object keys must match exactly to the corresponding provider API.","title":"custom_fields"}} collapsible={false} discriminator={false}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>upsert_on</strong><span className={"openapi-schema__name"}> object</span><span className={"openapi-schema__divider"}></span><span className={"openapi-schema__required"}>required</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"key"} required={true} schemaName={"string"} qualifierMessage={"**Possible values:** [`email`]"} schema={{"type":"string","enum":["email"]}}></SchemaItem><SchemaItem collapsible={false} name={"values"} required={true} schemaName={"string[]"} qualifierMessage={undefined} schema={{"type":"array","items":{"type":"string","example":"hello@example.com"}}}></SchemaItem></div></details></SchemaItem></ul></details></TabItem></MimeTabs><div><div><ApiTabs><TabItem label={"201"} value={"201"}><div>

Contact created

</div><div><MimeTabs className={"openapi-tabs__mime"} schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs className={"openapi-tabs__schema"}><TabItem label={"Schema"} value={"Schema"}><details style={{}} className={"openapi-markdown__details response"} data-collapsed={false} open={true}><summary style={{}} className={"openapi-markdown__details-summary-response"}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>errors</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","description":"The full error message from the remote Provider. The schema and level of detail will vary by Provider.","example":"{\"code\":400,\"body\":{\"status\":\"error\",\"message\":\"Property values were not valid: [{\\\\\"isValid\\\\\":false,\\\\\"message\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\",\\\\\"error\\\\\":\\\\\"PROPERTY_DOESNT_EXIST\\\\\",\\\\\"name\\\\\":\\\\\"__about_us\\\\\",\\\\\"localizedErrorMessage\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\"}]\",\"correlationId\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"category\":\"VALIDATION_ERROR\"},\"headers\":{\"access-control-allow-credentials\":\"false\",\"cf-cache-status\":\"DYNAMIC\",\"cf-ray\":\"8053d17b9dae9664-SJC\",\"connection\":\"close\",\"content-length\":\"361\",\"content-type\":\"application/json;charset=utf-8\",\"date\":\"Mon, 11 Sep 2023 23:51:22 GMT\",\"nel\":\"{\\\\\"success_fraction\\\\\":0.01,\\\\\"report_to\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"report-to\":\"{\\\\\"endpoints\\\\\":[{\\\\\"url\\\\\":\\\\\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\\\\\"}],\\\\\"group\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"server\":\"cloudflare\",\"strict-transport-security\":\"max-age=31536000; includeSubDomains; preload\",\"vary\":\"origin, Accept-Encoding\",\"x-content-type-options\":\"nosniff\",\"x-envoy-upstream-service-time\":\"91\",\"x-evy-trace-listener\":\"listener_https\",\"x-evy-trace-route-configuration\":\"listener_https/all\",\"x-evy-trace-route-service-name\":\"envoyset-translator\",\"x-evy-trace-served-by-pod\":\"iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2\",\"x-evy-trace-virtual-host\":\"all\",\"x-hubspot-correlation-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-hubspot-ratelimit-interval-milliseconds\":\"10000\",\"x-hubspot-ratelimit-max\":\"100\",\"x-hubspot-ratelimit-remaining\":\"99\",\"x-hubspot-ratelimit-secondly\":\"10\",\"x-hubspot-ratelimit-secondly-remaining\":\"9\",\"x-request-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-trace\":\"2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000\"}}\n"}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","description":"The Supaglue error code associated with the error.","example":"MISSING_REQUIRED_FIELD"}}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string","description":"A brief description of the error. The schema and type of message will vary by Provider.","example":"Property values were not valid\n"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>record</strong><span className={"openapi-schema__name"}> object</span></span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={true} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem></div></details></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}} className={"openapi-markdown__details"}><summary style={{}}><span className={"openapi-schema__container"}><strong className={"openapi-schema__property"}>warnings</strong><span className={"openapi-schema__name"}> object[]</span></span></summary><div style={{"marginLeft":"1rem"}}><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem","paddingBottom":".5rem"}}>Array [</div></li><SchemaItem collapsible={false} name={"detail"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><SchemaItem collapsible={false} name={"problem_type"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaName={"string"} qualifierMessage={undefined} schema={{"type":"string"}}></SchemaItem><li><div style={{"fontSize":"var(--ifm-code-font-size)","opacity":"0.6","marginLeft":"-.5rem"}}>]</div></li></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    [\n      {\n        \"detail\": \"{\\\"code\\\":400,\\\"body\\\":{\\\"status\\\":\\\"error\\\",\\\"message\\\":\\\"Property values were not valid: [{\\\\\\\\\\\"isValid\\\\\\\\\\\":false,\\\\\\\\\\\"message\\\\\\\\\\\":\\\\\\\\\\\"Property \\\\\\\\\\\\\\\\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\\\\\\\\\\\\\\\" does not exist\\\\\\\\\\\",\\\\\\\\\\\"error\\\\\\\\\\\":\\\\\\\\\\\"PROPERTY_DOESNT_EXIST\\\\\\\\\\\",\\\\\\\\\\\"name\\\\\\\\\\\":\\\\\\\\\\\"__about_us\\\\\\\\\\\",\\\\\\\\\\\"localizedErrorMessage\\\\\\\\\\\":\\\\\\\\\\\"Property \\\\\\\\\\\\\\\\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\\\\\\\\\\\\\\\" does not exist\\\\\\\\\\\"}]\\\",\\\"correlationId\\\":\\\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\\\",\\\"category\\\":\\\"VALIDATION_ERROR\\\"},\\\"headers\\\":{\\\"access-control-allow-credentials\\\":\\\"false\\\",\\\"cf-cache-status\\\":\\\"DYNAMIC\\\",\\\"cf-ray\\\":\\\"8053d17b9dae9664-SJC\\\",\\\"connection\\\":\\\"close\\\",\\\"content-length\\\":\\\"361\\\",\\\"content-type\\\":\\\"application/json;charset=utf-8\\\",\\\"date\\\":\\\"Mon, 11 Sep 2023 23:51:22 GMT\\\",\\\"nel\\\":\\\"{\\\\\\\\\\\"success_fraction\\\\\\\\\\\":0.01,\\\\\\\\\\\"report_to\\\\\\\\\\\":\\\\\\\\\\\"cf-nel\\\\\\\\\\\",\\\\\\\\\\\"max_age\\\\\\\\\\\":604800}\\\",\\\"report-to\\\":\\\"{\\\\\\\\\\\"endpoints\\\\\\\\\\\":[{\\\\\\\\\\\"url\\\\\\\\\\\":\\\\\\\\\\\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\\\\\\\\\\\"}],\\\\\\\\\\\"group\\\\\\\\\\\":\\\\\\\\\\\"cf-nel\\\\\\\\\\\",\\\\\\\\\\\"max_age\\\\\\\\\\\":604800}\\\",\\\"server\\\":\\\"cloudflare\\\",\\\"strict-transport-security\\\":\\\"max-age=31536000; includeSubDomains; preload\\\",\\\"vary\\\":\\\"origin, Accept-Encoding\\\",\\\"x-content-type-options\\\":\\\"nosniff\\\",\\\"x-envoy-upstream-service-time\\\":\\\"91\\\",\\\"x-evy-trace-listener\\\":\\\"listener_https\\\",\\\"x-evy-trace-route-configuration\\\":\\\"listener_https/all\\\",\\\"x-evy-trace-route-service-name\\\":\\\"envoyset-translator\\\",\\\"x-evy-trace-served-by-pod\\\":\\\"iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2\\\",\\\"x-evy-trace-virtual-host\\\":\\\"all\\\",\\\"x-hubspot-correlation-id\\\":\\\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\\\",\\\"x-hubspot-ratelimit-interval-milliseconds\\\":\\\"10000\\\",\\\"x-hubspot-ratelimit-max\\\":\\\"100\\\",\\\"x-hubspot-ratelimit-remaining\\\":\\\"99\\\",\\\"x-hubspot-ratelimit-secondly\\\":\\\"10\\\",\\\"x-hubspot-ratelimit-secondly-remaining\\\":\\\"9\\\",\\\"x-request-id\\\":\\\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\\\",\\\"x-trace\\\":\\\"2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000\\\"}}\\n\",\n        \"problem_type\": \"BAD_REQUEST_ERROR\",\n        \"title\": \"Property values were not valid\\n\"\n      }\n    ]\n  ],\n  \"record\": {\n    \"id\": \"string\"\n  },\n  \"warnings\": [\n    {\n      \"detail\": \"string\",\n      \"problem_type\": \"string\",\n      \"title\": \"string\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div></div>
      
